[gd_scene load_steps=6 format=3 uid="uid://df5ovt2ks4nt8"]

[ext_resource type="Script" path="res://player/ui/pause_menu/front_screen/pause_menu.gd" id="1_k35q6"]
[ext_resource type="PackedScene" uid="uid://cgmg5duiaqro4" path="res://player/ui/pause_menu/front_screen/pause_menu_button.tscn" id="2_6ubni"]
[ext_resource type="PackedScene" uid="uid://k2ejn356na3h" path="res://player/ui/pause_menu/weapons_menu/weapons_menu.tscn" id="3_nbjup"]
[ext_resource type="PackedScene" uid="uid://c3dnq1mhtehaw" path="res://player/ui/pause_menu/options_menu/options_menu.tscn" id="4_2eprf"]
[ext_resource type="FontFile" uid="uid://cncaotha3bqnj" path="res://fonts/kanit/kanit_medium.ttf" id="8_ol3b3"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k35q6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.266667)

[node name="MainMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -257.0
offset_right = 150.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ButtonResume" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonQuit")
text = "MENU_PAUSE_BUTTON_RESUME"

[node name="ButtonReload" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
text = "MENU_PAUSE_BUTTON_RESET"

[node name="ButtonWeapons" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
text = "MENU_PAUSE_BUTTON_WEAPONS"

[node name="ButtonGadgets" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
text = "MENU_PAUSE_BUTTON_GADGETS"

[node name="ButtonQuickSelect" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
text = "MENU_PAUSE_BUTTON_QUICK_SELECT"

[node name="ButtonItems" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
text = "MENU_PAUSE_BUTTON_ITEMS"

[node name="ButtonOptions" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
text = "MENU_PAUSE_BUTTON_OPTIONS"

[node name="ButtonQuit" parent="MainMenu" instance=ExtResource("2_6ubni")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ButtonResume")
text = "MENU_PAUSE_BUTTON_QUIT"

[node name="WeaponsMenu" parent="." instance=ExtResource("3_nbjup")]
layout_mode = 1

[node name="GadgetsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GadgetsMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "This is the gadgets menu"
fit_content = true

[node name="QuickSelectMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="QuickSelectMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "This is the quick select menu"
fit_content = true

[node name="ItemsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ItemsMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "This is the items menu"
fit_content = true

[node name="OptionsMenu" parent="." instance=ExtResource("4_2eprf")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.0
offset_top = -201.5
offset_right = 237.0
offset_bottom = 201.5
grow_horizontal = 2
grow_vertical = 2

[node name="BuildLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -25.0
offset_right = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_ol3b3")
text = "Project N5 by denizk0461"

[connection signal="pressed" from="MainMenu/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="MainMenu/ButtonReload" to="." method="_on_button_reload_pressed"]
[connection signal="pressed" from="MainMenu/ButtonWeapons" to="." method="_on_button_weapons_pressed"]
[connection signal="pressed" from="MainMenu/ButtonGadgets" to="." method="_on_button_gadgets_pressed"]
[connection signal="pressed" from="MainMenu/ButtonQuickSelect" to="." method="_on_button_quick_select_pressed"]
[connection signal="pressed" from="MainMenu/ButtonItems" to="." method="_on_button_items_pressed"]
[connection signal="pressed" from="MainMenu/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="MainMenu/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="on_weapons_menu_closed" from="WeaponsMenu" to="." method="_on_weapons_menu_on_weapons_menu_closed"]
[connection signal="on_options_menu_closed" from="OptionsMenu" to="." method="_on_options_menu_on_options_menu_closed"]
